--- a/src/scss/_anim-spinnerSuccess.scss
+++ b/src/scss/_anim-spinnerSuccess.scss
@@ -1,8 +1,8 @@
 //colours 
 $bodyBg: #333;
-$strokeColor: #000;
+$strokeColor: #fff;
 $textColor: #000; 
-$fillColorSuccess: #7cc031;
+$fillColorSuccess: #83d644;
 $fillColorFail: #c03150; 
 //sizing
 $spinnerSize: 30px;
@@ -104,13 +104,13 @@ $successTickSpeed: 1s;
 .notify__progress-bar {
     height: 100%;
     position: absolute;
-    transform: translate3d(0, 100%, 0);
-    transition: transform 2000ms ease-in;
+    //transform: translate3d(0, 100%, 0);
+    transition: transform 1000ms ease-in;
     width: 100%;
     z-index: -1;
     &.--complete {
       background: $fillColorSuccess;
-      transform: translate3d(0, 0, 0);
+      //transform: translate3d(0, 0, 0);
     }
     // &.notify__progress-bar--fill--success {
     //   background: $fillColorSuccess;
