--- a/src/scss/_anim-barcode.scss
+++ b/src/scss/_anim-barcode.scss
@@ -1,72 +1,59 @@
-.wrap__scanner {
-    // align-items: center;
-    // display: flex;
-    // width: 320px;
-    // //margin: 0 auto;
-    // // margin-right: 2rem;
-    // justify-content: flex-start;
-    position: absolute;
-    opacity: 0;
-    &.--active {
-        opacity: 1;
-    }
+.barcode {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  opacity: 0;
+  width: 100vw;
+  height: 100%;
+  &.--active{
+    opacity: 1;
+  }
 }
 
-.barcode {
-    
-    @for $i from 1 through 24 {
-      li:nth-child(#{$i}){
-        $w: random(5);
-        width: #{$w}px;
-      }
-    }
-  
-    ul {
-      height: 100%;
-      padding: 0;
-      //display: table-cell;
-      //vertical-align: middle;
-    //   list-style-type: none;
-    //   text-align: center;
-    width: 140px;
-    overflow: hidden;
-    white-space: nowrap;
+.barcodeSVG {
+  display: block;
+  transform: scale(2);
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+}
 
-    }
-  
-    li {
-      display: inline-block;
-      //width: 2px;
-      height: 50px;
-      background-color: #444;
-    }
-   
-    .laser {
-      margin-left: -25%;
-      background-color: tomato;
-      height: 1px;
-      position: absolute;
-      top: 10%;
-      z-index: 2;
-      width: 150%;
-      box-shadow: 0 0 4px red;
-      animation: scanning 2s infinite;
-    }
-  
-    .diode {
-      animation: flicker 50ms infinite;
-    }
-  
+.laser {
+  background-color: tomato;
+  height: 1px;
+  position: absolute;
+  z-index: 2;
+  width: 25%;
+  box-shadow: 0 0 4px red;
+  animation: scanning 2s infinite;
+  position: relative;
+  left: 0;
+  right: 0;
+}
+
+.diode {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  top: 95px;
+  right: 0;
+  animation: flicker 50ms infinite;
+  width: 100%;
+}
+
+@keyframes flicker {
+  50% {
+    opacity: .2;
   }
-  
-  @keyframes flicker {
-    50% {
-      opacity: .2;
-    }
+}
+
+@keyframes scanning {
+  50% {
+    transform: translateY(50px);
   }
-  
-  @keyframes scanning {
-    50% {
-      transform: translateY(75px);
-    }
-  }
+}
