--- a/src/scss/_anim-spinnerSuccess.scss
+++ b/src/scss/_anim-spinnerSuccess.scss
@@ -2,15 +2,16 @@
 $bodyBg: #333;
 $strokeColor: #fff;
 $textColor: #000; 
-$fillColorSuccess: #83d644;
+$fillColorSuccess: linear-gradient(135deg, #bdf095 0%,#83d644 100%);
 $fillColorFail: #c03150; 
 //sizing
 $spinnerSize: 30px;
 $strokeWidth: 2;
 ///////////////////////////////////////////speeds
-$spinnerSpeed: 300ms;
+$spinnerSpeed: 500ms;
 $successRingSpeed: 1s;
 $successTickSpeed: 1s;
+
 
 // $animSpeedLeftStrokeFail: 2000ms;
 // $animSpeedRightStrokeFail: 2000ms;
@@ -46,28 +47,41 @@ $successTickSpeed: 1s;
     display: flex;
     height: 100%;   
     width: 100%;
+    position: absolute;
+    left: 0;
 }
 
 .spinnerResult {
-  height: $spinnerSize;
-  position: absolute;
-  transition: opacity $spinnerSpeed;
-  top: 50;
-  width: $spinnerSize;
-  opacity: 0; //////////////////////////////
-  &:before {
-    content: '';
-    height: $spinnerSize;
     position: absolute;
-    width: $spinnerSize;
-    animation: anim_spinner $spinnerSpeed linear infinite;
-    border: 1px solid rgba($strokeColor, 0);
-    border-top-color: rgba($strokeColor, 0.9);
-    border-radius: 50%;
-  }
-  &.--spinner-complete {
-    opacity: 0;
-  }
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    opacity: 1;
+    transition: opacity 300ms ease-in-out;
+    text-align: center;
+    z-index: 1;
+    &:before {
+      height: 30px;
+      width: 30px;
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+    }
+    &:not(:required):before {
+      animation: spinner 500ms linear infinite;
+      border: 2px solid rgba(255, 255, 255, 0.9);
+      border-top-color: rgba(255, 255, 255, 0.0);
+      border-radius: 50%;
+    }
+    &.--spinner-complete {
+        opacity: 0;
+    }
 }
 
 .success-ring {
@@ -81,7 +95,7 @@ $successTickSpeed: 1s;
     transform-origin: 50% 50%;
     opacity: 0;
     &.--complete {
-        animation: anim_successring $successRingSpeed ease-in infinite;
+        animation: anim_successring $successRingSpeed ease-in;
         opacity: 1;
     }
 }
@@ -89,14 +103,14 @@ $successTickSpeed: 1s;
 .success-tick {
   fill: none;
   opacity: 0;
-  stroke-dasharray: 110;
-  stroke-dashoffset: -110;
+  stroke-dasharray: 89;
+  stroke-dashoffset: -160;
   stroke: $strokeColor;
   stroke-width: $strokeWidth;
   stroke-linecap: round;
   stroke-linejoin: round;
   &.--complete {
-    animation: anim_successcheck $successTickSpeed ease-in infinite;
+    animation: anim_successcheck $successTickSpeed ease-in;
     opacity: 1;
   }
 }
@@ -104,13 +118,15 @@ $successTickSpeed: 1s;
 .notify__progress-bar {
     height: 100%;
     position: absolute;
-    //transform: translate3d(0, 100%, 0);
-    transition: transform 1000ms ease-in;
+    left: 0; 
+    right: 0; 
+    transform: translate3d(0, 100%, 0);
+    transition: transform 1ms ease-in;
     width: 100%;
     z-index: -1;
     &.--complete {
       background: $fillColorSuccess;
-      //transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
     }
     // &.notify__progress-bar--fill--success {
     //   background: $fillColorSuccess;
@@ -121,3 +137,8 @@ $successTickSpeed: 1s;
     //   transform: translate3d(0, 0, 0);
     // }
   }
+
+
+//   .result-group {
+//       display: none;
+//   }
