--- a/src/scss/start.scss
+++ b/src/scss/start.scss
@@ -1,7 +1,6 @@
 @import
-'_buttons',
-'_anim-spinner',
-'_anim-spinnerSuccess',
-'_anim-printer',
-'_anim-barcode',
+'_colors',
+'_mixins',
+'_remote',
+'_bigScreen',
 '_main';
