--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,71 +1,8 @@
-$canvasHeight: 568px;
-$canvasWidth: 320px;
-
-body {
-	background-color: #333;
-	overflow: hidden;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-.wrap__main {
-	align-items: center;
-	background-color: #333;
-	display: flex;
-	height: 100%;
-	justify-content: center;
-	position: relative;
-	margin-top: 4rem;
-	z-index: 9;
-}
-
-.wrap__inner {
-	background-color: #fff;
-	height: $canvasHeight;
-	width: $canvasWidth;
-	position: relative;
-	z-index: 8;
-}
-
-.filter {
-	background-color: rgba(0,0,0,0.4);
-	height: $canvasHeight;
-	position: fixed;
-	top: 50px;
-	transform: translateY(-700px);
-	width: $canvasWidth;
-	z-index: 2;
-	&.--active {
-			transform: translateY(14px);
-	}
-}
-
-.shade {
-	background-color: #333;
-	height: 1000px;
-	position: absolute;
-	top: 568px;
-	width: 100%;
- 	z-index: 9;
-}
-.wrap__popup {
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-	top: 405px;
-	height: 242px;
-	position: absolute;
-	transform: translateY(242px);
-	transition: transform 400ms;
-	width: $canvasWidth;
-	z-index: 2;
-	&.--active {
-		transform: translateY(-79px);
-	}
-}
-
-h1 {
-	cursor: pointer;
-	padding: 1rem 2rem 0;
-	font-family: sans-serif;
-	font-size: 1.25rem;
+html {
+    background-color: $colour_bodyBackground;
 }
